# azure-ds-cert

./: 01_initial_connection.ipynb  02_working_with_data.ipynb  03_compute_targets.ipynb  04_automl.ipynb  05_environments.ipynb  cli.md  initial_connection.ipynb  pyproject.toml  sdk.md
labs/: 02_run_training_script.ipynb  03_work_with_data.ipynb  generate_dataset.ipynb  train_script_01.py  utils.py
self_paced_modules/: 02_working_with_data.ipynb  05_environments.ipynb
self_paced_modules/data/mltable/: file.txt
